--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>cn.cyejing</groupId>
     <artifactId>fast-ngrok</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.1</version>
+    <version>2.1.1</version>
     <modules>
         <module>fast-ngrok-core</module>
         <module>fast-ngrok-starter</module>
@@ -30,8 +30,8 @@
     </scm>
     <developers>
         <developer>
-            <name>cyejing</name>
-            <email>jing23501@qq.com</email>
+            <name>头号懒人</name>
+            <email>511639411@qq.com</email>
         </developer>
     </developers>
 
@@ -43,7 +43,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <spring-boot.version>1.5.6.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.1.RELEASE</spring-boot.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
@@ -78,7 +78,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.33</version>
+                <version>1.2.54</version>
             </dependency>
 
             <dependency>
@@ -156,9 +156,9 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
-                                <configuration>
-                                    <additionalparam>-Xdoclint:none</additionalparam>
-                                </configuration>
+                                <!--<configuration>-->
+                                    <!--<additionalparam>-Xdoclint:none</additionalparam>-->
+                                <!--</configuration>-->
                             </execution>
                         </executions>
                     </plugin>
